syntax = "proto3";

package common;

option go_package = "./proto/pb";

message PageRequest {
  int32 page = 1;
  int32 size = 2;
}

message AbsResponse {
  int32 status = 1;
  string message = 2;
}
message User {
  int64 id = 1;
  string name = 2;
  string surname = 3;
  string phoneNumber = 4;
  string role = 5;
  string chatId = 6;
  int32 todayExamCount = 7;
}
